--- a/client/app/src/main/res/layout/dialog_rate_route.xml
+++ b/client/app/src/main/res/layout/dialog_rate_route.xml
@@ -41,8 +41,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".feature_route.create_route.info.CreateRouteInfoFragment">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/create_route_image"
