--- a/client/app/src/main/res/values/themes.xml
+++ b/client/app/src/main/res/values/themes.xml
@@ -46,6 +46,8 @@
         <!--        <item name="snackbarStyle">@style/Widget.NaTour.Light.Snackbar</item>-->
         <!--        <item name="snackbarButtonStyle">@style/Widget.NaTour.Light.SnackbarButton</item>-->
         <!--        <item name="snackbarTextViewStyle">@style/Widget.NaTour.Light.SnackbarText</item>-->
+
+        <item name="preferenceTheme">@style/PrefsTheme</item>
     </style>
 
     <style name="TopBarColorElevation">
