--- a/client/app/src/main/res/layout/fragment_bottom_sheet_post.xml
+++ b/client/app/src/main/res/layout/fragment_bottom_sheet_post.xml
@@ -10,18 +10,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/private_msg_button"
-            style="@style/Widget.Material3.Button.TextButton.Icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="Contatta in privato"
-            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-            android:textColor="?android:textColorPrimary"
-            app:icon="@drawable/ic_chat_bubble_outline_24"
-            app:iconPadding="33dp"
-            app:iconTint="?android:textColorPrimary" />
+<!--        <Button-->
+<!--            android:id="@+id/private_msg_button"-->
+<!--            style="@style/Widget.Material3.Button.TextButton.Icon"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="15dp"-->
+<!--            android:text="Contatta in privato"-->
+<!--            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"-->
+<!--            android:textColor="?android:textColorPrimary"-->
+<!--            app:icon="@drawable/ic_chat_bubble_outline_24"-->
+<!--            app:iconPadding="33dp"-->
+<!--            app:iconTint="?android:textColorPrimary" />-->
 
         <Button
             android:id="@+id/report_post_button"
