--- a/client/app/src/main/res/layout/bottom_sheet_filter.xml
+++ b/client/app/src/main/res/layout/bottom_sheet_filter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature_route.route_search.BottomSheetFilterFragment">
+    tools:context=".feature_route.route_search.FilterBottomSheet">
 
     <Button
         android:id="@+id/button_apply"
