--- a/client/app/src/main/res/layout/fragment_create_compilation.xml
+++ b/client/app/src/main/res/layout/fragment_create_compilation.xml
@@ -21,7 +21,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +31,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".feature_route.create_route.info.CreateRouteInfoFragment">
+            tools:context=".feature_route.create_route.info.CreateCompilationFragment">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/compilationTitleTextField"
@@ -158,7 +158,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/createCompilationFab"
