--- a/client/app/src/main/res/layout/fragment_create_route_info.xml
+++ b/client/app/src/main/res/layout/fragment_create_route_info.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorSurface"
-    android:transitionName="transitionNewRouteFab">
+    android:background="?attr/colorSurface">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
